# cli-sim-game-escape

./: .devenv.json  .gitignore  .mise.toml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  build.sh  clippy.toml  index.html  metropolis_worker_entry.js  netlify.toml  package-lock.json  package.json  playwright.config.ts
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/skills/: game-design.md
.claude/skills/dot-line-design/: SKILL.md
.claude/skills/game-design/: SKILL.md
.config/: nextest.toml
.github/workflows/: ci.yml
.ziku/: lock.json
docs/adr/: 0001-metropolis-cpu-behavior.md
docs/plans/: 2026-02-05-cookie-factory-expansion-design.md  2026-02-05-reincarnation-rebalance-design.md  2026-02-14-pmd-style-dungeon-design.md  2026-02-14-pmd-style-dungeon-plan.md
src/: click.rs  game.rs  input.rs  lib.rs  main.rs  sound.rs  time.rs  widgets.rs
src/games/: mod.rs
src/games/abyss/: actions.rs  config.rs  effects.rs  logic.rs  mod.rs  policy.rs  render.rs  save.rs  simulator.rs  state.rs
src/games/cafe/: DESIGN.md  actions.rs  affinity.rs  cards.rs  input_handler.rs  logic.rs  mod.rs  render.rs  save.rs  scenario.rs  simulator.rs  social.rs  state.rs
src/games/cafe/characters/: affinity.rs  episodes.rs  mod.rs  skills.rs
src/games/cafe/gacha/: cards.rs  mod.rs  state.rs
src/games/cafe/produce/: events.rs  mod.rs
src/games/cafe/render/: day_result.rs  gacha.rs  hub.rs  interaction.rs  mod.rs  produce.rs  story.rs
src/games/cafe/social_sys/: achievements.rs  login.rs  missions.rs  mod.rs  stamina.rs
src/games/cafe/story/: CHARACTERS.md  PLOT.md  README.md  STYLE_GUIDE.md  WORLD.md
src/games/career/: DESIGN.md  DESIGN_EXPERIENCE.md  actions.rs  logic.rs  mod.rs  render.rs  save.rs  state.rs
src/games/cookie/: actions.rs  logic.rs  mod.rs  render.rs  save.rs  simulator.rs  state.rs
src/games/dig/: actions.rs  logic.rs  mod.rs  render.rs  save.rs  state.rs
src/games/factory/: actions.rs  grid.rs  logic.rs  mod.rs  render.rs  state.rs
src/games/godfield/: actions.rs  logic.rs  mod.rs  render.rs  state.rs
src/games/merge/: actions.rs  logic.rs  mod.rs  render.rs  save.rs  state.rs
src/games/metropolis/: DESIGN.md  REDESIGN.md  ai.rs  ai_worker.rs  logic.rs  mod.rs  render.rs  save.rs  simulator.rs  state.rs  terrain.rs  worker_handle.rs
src/games/ranch/: actions.rs  logic.rs  mod.rs  render.rs  save.rs  simulator.rs  state.rs
src/games/rpg/: DESIGN.md  actions.rs  balance.rs  commands.rs  dungeon_map.rs  dungeon_view.rs  events.rs  logic.rs  lore.rs  mod.rs  overworld_map.rs  render.rs  simulator.rs  state.rs
src/games/tamagotchi/: actions.rs  logic.rs  mod.rs  render.rs  save.rs  state.rs
tests/: lint_render.rs  lint_worker_entry.rs
tests/e2e/: metropolis-worker.spec.ts
