[package]
name = "cli-sim-game-escape"
version = "0.1.0"
edition = "2021"

[dependencies]
ratzilla = "0.3"
# ratzilla 0.3 が transitive で ratatui 0.30 を使う。`unstable-rendered-line-info`
# feature を有効化するために直接依存を追加。Cargo の feature unification で
# ratzilla 経由のリンクと同じ ratatui crate に feature が乗る。
# `Paragraph::line_count` API を ClickableList::visual_height で使う。
ratatui = { version = "0.30", default-features = false, features = ["unstable-rendered-line-info"] }
# wasm feature が必須: SimpleRng::default() が std::time::SystemTime::now() を呼ぶが
# これは wasm32-unknown-unknown で panic する。wasm feature を有効化すると web-time
# クレートが SystemTime を Performance.now() ベースに差し替えて回避する。
# (std-duration は wasm と排他なので enable しない。tachyonfx::Duration を直接使う。)
tachyonfx = { version = "0.25", features = ["wasm"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
# wasm-bindgen は ratzilla 経由でも入るが、worker binary で `#[wasm_bindgen]`
# 属性を直接書く必要があるため明示依存させる。ratzilla 0.3 が使う 0.2 系列を
# 共有して、wasm-bindgen の二重リンクを防ぐ。
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "DomRect", "HtmlCollection",
    "Performance", "Storage", "console",
    # AI を別 WASM の Web Worker に逃がすために Worker / MessageEvent を有効化。
    # Trunk の `data-type="worker"` は --target no-modules で wasm-bindgen を
    # 走らせるため、メイン側はクラシック Worker (= `Worker::new` のみ、
    # `WorkerType::Module` は使わない) として spawn する。
    "Worker", "MessageEvent",
] }

[dev-dependencies]
proptest = "1.4"

[profile.release]
# Optimize for small WASM binary size (faster download & parse)
opt-level = "s"
# Thin LTO: good size reduction without the extreme compile time of fat LTO
lto = "thin"
# Strip debug info from release builds
strip = "debuginfo"

# 依存クレート (ratatui / ratzilla / proptest など) は dev / test でも最適化する。
# 自プロジェクト側は debug のまま残してインクリメンタルビルドの速さを保つ。
# 注意: 依存の初回 (cold) ビルドは数十秒〜数分長くなる。trunk serve 含む。
# Swatinem/rust-cache@v2 が CI/dev の両方でこれをキャッシュする想定。
[profile.dev.package."*"]
opt-level = 3

# `cargo test` は simulator (metropolis / cafe / abyss) の tick ループに支配される。
# 自プロジェクト側も opt-level=3 にすると debug 比 10-20x 速くなる。
# debug = 2 (test profile のデフォルト) は維持しているので file:line は出るが、
# inline 展開で stack frame が消える / local variable が optimize out される DX コストはある。
[profile.test]
opt-level = 3
